Update to v0.5.3+1.21.5: Adds error dump and bug fix button work again in option menu